# airflow-gke-taskflow

./: README.md  pyproject.toml
gke_taskflow/operators/: gke_taskflow.py
requirements/: dev_3.10.txt  main_3.10.txt
tests/: conftest.py  test_gke_taskflow.py
